--- a/src/core/assets/styles/quasar.sass
+++ b/src/core/assets/styles/quasar.sass
@@ -4,3 +4,4 @@
 @import './quasar.variables.sass'
 @import 'quasar/src/css/index.sass'
 
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700&family=Heebo:wght@400;700&family=Inter:wght@400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap')
