chore: create component CardCountryInfo

--- a/src/core/assets/styles/quasar.variables.sass
+++ b/src/core/assets/styles/quasar.variables.sass
@@ -6,17 +6,11 @@ $primary:   #1125D6
 $secondary: #FF5555
 $accent:    #FFB21E
 
-$dark-page: #CAC9FF
-$dark:      #303B59
+$dark-page: #202C36
+$dark:      #2B3844
 $white:     #FFFFFF
 
-
-
-
-
 $positive:   #00BB8F
-$info:       #ECF2FF
-
-
+$info:       #FAFAFA
 
 @import 'quasar/src/css/variables.sass'
